<resources>
    <string name="app_name">Locksmith Example</string>

    <string name="cancel">Cancel</string>
    <string name="usePassword">Use Password</string>

    <string name="fingerprintDialogTitle">Login</string>
    <string name="fingerprintDialogSubtitle">Login to your Nodes Account</string>
    <string name="fingerprintDialogDescription">Touch the finger print sensor to authorize your account</string>

    <string name="fingerprintCustomDialogTitle">Fingerprint login</string>
    <string name="fingerprintCustomDialogSubtitle">Use your fingerprint for faster, easier access to your account</string>
    <string name="fingerprintCustomDialogDescription">Confirm fingerprint to continue</string>
    <string name="fingerprintCustomDialogDefaultMessage">Touch Sensor</string>

    <string name="fingerprintErrorMessage">Error Authenticating</string>
    <string name="fingerprintSuccessMessage">Successfully Authenticated!</string>

    <string name="errorInvalidData">Data is not valid encrypted data</string>
    <string name="errorGeneric">Unable to complete action</string>
    <string name="errorUnsupportedAndroidVersion">Error: Unsupported android version.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enable_custom_dialog">Enable Custom Dialog</string>
    <string name="enter_data_to_be_encrypted">Enter data to be encrypted</string>
    <string name="decrypt">Decrypt</string>
    <string name="encrypt">Encrypt</string>
    <string name="result">Result</string>
</resources>
